log
Thu 18 Aug 2022 01:30:21 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: ‘List’ {aka ‘struct List’} has no member named ‘primero’
   33 |         L->primero = NULL;
      |          ^~
list.c:34:10: error: ‘List’ {aka ‘struct List’} has no member named ‘ultimo’
   34 |         L->ultimo = NULL;
      |          ^~
Compilation failed
b9b72c8
Thu 18 Aug 2022 01:31:22 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   33 |         L->first = NULL;
      |          ^~
list.c:34:10: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   34 |         L->last = NULL;
      |          ^~
Compilation failed
64a9363
Thu 18 Aug 2022 01:32:14 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
19e2f5d
Thu 18 Aug 2022 01:51:55 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 15/70
7c8360d
Thu 18 Aug 2022 01:52:13 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 15/70
19ffa43
Thu 18 Aug 2022 01:57:00 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
e3fe891
Fri 19 Aug 2022 12:59:51 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1169050
Fri 19 Aug 2022 01:05:45 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:27: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   64 |   if(list == NULL) return NULL;
      |                           ^~~~
list.c:63:6: note: declared here
   63 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
79ce2cd
Fri 19 Aug 2022 01:06:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
b26791e
Fri 19 Aug 2022 01:10:17 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 25/70
6bb3b2b
Fri 19 Aug 2022 01:15:25 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
129a860
